# high-level-synthesis

./: .gitignore  ADD.v  CMakeLists.txt  COMP.v  Circuit1.v  Circuit6.v  DEC.v  DIV.v  DPCL_LAT.txt  INC.v  MOD.v  MUL.v  MUX2x1.v  NETLISTS_LAT.txt  Parser.cpp  README.MD  README.txt  REG.v  Readme.txt  SHL.v  SHR.v  SUB.v  circuit2.v  circuit_1.v  circuit_2.v  circuit_3.v  circuit_4.v  circuit_5.v  circuit_6.v  davis_DPCL_LAT.txt  fwillard_DCPL_LAT.txt  krotchie_DPCL_LAT.txt  main.cpp  master_DPCL_LAT  master_DPCL_LAT.txt  niman critical path.txt  niman_DPCL_LAT.txt  niman_NETLISTS_LAT.txt
src/: CMakeLists.txt  Component.cpp  Component.hpp  IfOperation.cpp  IfOperation.hpp  Operation.cpp  Operation.hpp  Parser.cpp  Parser.hpp  ParserException.cpp  ParserException.hpp  VerilogGen.cpp  VerilogGen.hpp  edge.cpp  edge.hpp  graph.cpp  graph.hpp  main.cpp  node.cpp  node.hpp  schedule_exception.cpp  schedule_exception.hpp  scheduling.cpp  scheduling.hpp  simple.txt
submit/: README.txt
